# BGFXShaderCPUEmulator

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01-cubes/: CMakeLists.txt  fs_cubes.sc  main.cpp  varying.def.sc  vs_cubes.sc
include/: bgfx_cpu_emulation.h  bgfx_shader.h  bgfx_shader.sh
